force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/FS_Ruleset_Simulation_Report__c.object-meta.xml
<CustomObject>
    <description>Ruleset Simulation Report..</description>
    <label>Ruleset Simulation Report</label>
    <nameField>
        <label>Ruleset Simulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ruleset Simulation Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>