force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/All_DryRun_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>All_DryRun_Artifacts__c</fullName>
    <description>..</description>
    <label>All DryRun Artifacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>