force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/All_Target_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>All_Target_Artifacts__c</fullName>
    <description>..</description>
    <label>All Target Artifacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>