force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/CheckNoOfSimDays__c.field-meta.xml
<CustomField>
    <fullName>CheckNoOfSimDays__c</fullName>
    <description>..</description>
    <formula>NOW()- CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckNoOfSimDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>