force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/OD_ID__c.field-meta.xml
<CustomField>
    <fullName>OD_ID__c</fullName>
    <description>..</description>
    <label>OD ID</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Ruleset Simulation Reports</relationshipLabel>
    <relationshipName>Ruleset_Simulation_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>