force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Promote_Chg_Soft_Install_Tar_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_Soft_Install_Tar_Artifact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>..</description>
    <label>Promote Chg Soft Install Target Artifact</label>
    <type>Checkbox</type>
</CustomField>