force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Promote_Will_Change_Target_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Promote_Will_Change_Target_Artifacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>..</description>
    <label>Promote Will Change Target Artifacts</label>
    <type>Checkbox</type>
</CustomField>