force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Promote_Will_Chg_Bndle_Targt_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Promote_Will_Chg_Bndle_Targt_Artifact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>..</description>
    <label>Promote Will Chg Bundle Target Artifact</label>
    <type>Checkbox</type>
</CustomField>