force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Promote_Will_Chg_Settings_Trgt_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Promote_Will_Chg_Settings_Trgt_Artifacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>..</description>
    <label>Promote Will Chg Settings Trgt Artifacts</label>
    <type>Checkbox</type>
</CustomField>