force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Ruleset_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Ruleset_Error_Message__c</fullName>
    <description>..</description>
    <label>Ruleset Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>