force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Simulation_Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Artifact_Type__c</fullName>
    <description>..</description>
    <label>Simulation Artifact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>