force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Simulation_Number__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Number__c</fullName>
    <description>..</description>
    <label>Simulation Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>