force-app/main/default/objects/FS_Ruleset_Simulation_Report__c/fields/Simulation_Target_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Target_Artifact__c</fullName>
    <description>..</description>
    <label>Simulation Target Artifact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>